--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,63 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@500;600;800&family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,400&display=swap"
+      rel="stylesheet" />
     <link rel="stylesheet" href="./css/style.css" />
-    <title>Cleaning X</title>
+    <title>INNOMA VC</title>
   </head>
   <body>
     <!-- header -->
     <!-- @@include("html/_header.html", {}) -->
+    <header class="header">
+      <div class="container">
+        <div class="header__top">
+          <div class="logo">
+            <a href="#" class="logo__link">
+              <img src="./images/logo.svg" alt="logo" class="logo__img" />
+            </a>
+          </div>
+
+          <nav class="menu">
+            <ul class="menu__list">
+              <li class="menu__list-item">
+                <a href="#" class="menu__list-item-link"> Кто мы? </a>
+              </li>
+              <li class="menu__list-item">
+                <a href="#" class="menu__list-item-link"> Услуги </a>
+              </li>
+              <li class="menu__list-item">
+                <a href="#" class="menu__list-item-link"> Акселератор </a>
+              </li>
+              <li class="menu__list-item">
+                <a href="#" class="menu__list-item-link"> Новости </a>
+              </li>
+            </ul>
+          </nav>
+
+          <button class="btn btn--green header__top-btn">Войти</button>
+          <div class="hamburger"></div>
+        </div>
+        <div class="header__main">
+          <h1 class="title header__title">
+            Запустите
+            <span class="title__mod"
+              >технологический
+              <span class="title__extra">IT-</span> бизнес</span
+            >
+            на международных рынках
+          </h1>
+          <p class="header__subtitle">Открыт набор заявок на акселератор</p>
+          <p class="header__subtitle-mobile">
+            Старт ближайшего акселератора <span>15.12.2022</span>
+          </p>
+          <button class="btn btn--blue header__main-btn">Подать заявку</button>
+        </div>
+      </div>
+    </header>
 
     <!-- main -->
     <main class="main"></main>
