services & about & banner

--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,108 @@
     </header>
 
     <!-- main -->
-    <main class="main"></main>
+    <main class="main">
+      <!-- services -->
+      <section class="services">
+        <div class="container">
+          <h2 class="title services__title">Наши услуги</h2>
+          <div class="services__items">
+            <div class="services__item">
+              <div class="services__textbox">
+                <h3 class="title services__textbox-title">
+                  Аналитические исследования
+                </h3>
+                <p class="services__textbox-text">
+                  <span
+                    >Одним из наших ключевых направлений является анализ
+                    технологических трендов на международных рынках.</span
+                  >
+                  Мы проводим анализ на основе публичных исследований McKinsey,
+                  BCG, PWC, Deloitte, Accenture, BCG, EY, Crunchbase, Dealroom,
+                  F6S, PitchBook а также агрегируем и анализируем данные из
+                  открытых международных источников патенты, медиа, научные
+                  публикации
+                </p>
+                <button class="btn btn--green services__btn">
+                  Узнать подробнее
+                </button>
+              </div>
+              <div class="services__imgbox">
+                <img
+                  src="./images/service-research.png"
+                  alt=""
+                  class="services__img" />
+              </div>
+            </div>
+            <div class="services__item services__item-left">
+              <div class="services__imgbox">
+                <img
+                  src="./images/service-rocket.png"
+                  alt=""
+                  class="services__img" />
+              </div>
+              <div class="services__textbox">
+                <h3 class="title services__textbox-title">
+                  Онлайн акселератор для IT бизнеса
+                </h3>
+                <p class="services__textbox-text">
+                  Онлайн программа аскелерации IT бизнеса позволит вашей команде
+                  открыть новые горизонты и возможности для бизнеса на
+                  глобальных рынках. В результате программы вы получите
+                  возможность презентовать свой проект для международных
+                  инвесторов и локальных партнеров
+                </p>
+                <button class="btn btn--green">Узнать подробнее</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- about -->
+      <section class="about">
+        <div class="container">
+          <h2 class="title about__title">Для кого мы?</h2>
+          <div class="about__items">
+            <div class="about__item">
+              <div class="about__item-number">01</div>
+              <h3 class="about__item-title">IT проекты на стадии идеи</h3>
+              <p class="about__item-text">
+                Для стартапов, которые планируют привлечь международные
+                инвестиции, протестировать спрос и запустить продукт
+              </p>
+            </div>
+            <div class="about__item">
+              <div class="about__item-number">02</div>
+              <h3 class="about__item-title">Инновационный бизнес</h3>
+              <p class="about__item-text">
+                Для уже работающего технологического бизнес, позволим найти
+                новые международне рынки сбыта, масштабировать бизнес
+              </p>
+            </div>
+            <div class="about__item">
+              <div class="about__item-number">03</div>
+              <h3 class="about__item-title">Корпорации</h3>
+              <p class="about__item-text">
+                Для уже работающего технологического бизнес, позволим найти
+                новые международне рынки сбыта, масштабировать бизнес
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- banner -->
+      <section class="banner">
+        <h2 class="banner__title">
+          Научитесь исследовать иностранные рынки <br />
+          и откройте новые возможности для своего бизнеса
+        </h2>
+        <p class="banner__subtitle">
+          Наша команда поможет вам изучить рынки Ближнего Востока, Азии,
+          Латинской Америки и Африки
+        </p>
+        <button class="btn btn--blue banner__btn">Получить консультацию</button>
+      </section>
+    </main>
 
     <!-- footer -->
     <!-- @@include("html/_footer.html", {}) -->
