adaptive: services, about, banner

--- a/src/index.html
+++ b/src/index.html
@@ -69,7 +69,7 @@
         <div class="container">
           <h2 class="title services__title">Наши услуги</h2>
           <div class="services__items">
-            <div class="services__item">
+            <div class="services__item services__item-right">
               <div class="services__textbox">
                 <h3 class="title services__textbox-title">
                   Аналитические исследования
@@ -114,7 +114,9 @@
                   возможность презентовать свой проект для международных
                   инвесторов и локальных партнеров
                 </p>
-                <button class="btn btn--green">Узнать подробнее</button>
+                <button class="btn btn--green services__btn">
+                  Узнать подробнее
+                </button>
               </div>
             </div>
           </div>
@@ -124,30 +126,32 @@
       <section class="about">
         <div class="container">
           <h2 class="title about__title">Для кого мы?</h2>
-          <div class="about__items">
-            <div class="about__item">
-              <div class="about__item-number">01</div>
-              <h3 class="about__item-title">IT проекты на стадии идеи</h3>
-              <p class="about__item-text">
-                Для стартапов, которые планируют привлечь международные
-                инвестиции, протестировать спрос и запустить продукт
-              </p>
-            </div>
-            <div class="about__item">
-              <div class="about__item-number">02</div>
-              <h3 class="about__item-title">Инновационный бизнес</h3>
-              <p class="about__item-text">
-                Для уже работающего технологического бизнес, позволим найти
-                новые международне рынки сбыта, масштабировать бизнес
-              </p>
-            </div>
-            <div class="about__item">
-              <div class="about__item-number">03</div>
-              <h3 class="about__item-title">Корпорации</h3>
-              <p class="about__item-text">
-                Для уже работающего технологического бизнес, позволим найти
-                новые международне рынки сбыта, масштабировать бизнес
-              </p>
+          <div class="about__inner">
+            <div class="about__items">
+              <div class="about__item">
+                <div class="about__item-number">01</div>
+                <h3 class="about__item-title">IT проекты на стадии идеи</h3>
+                <p class="about__item-text">
+                  Для стартапов, которые планируют привлечь международные
+                  инвестиции, протестировать спрос и запустить продукт
+                </p>
+              </div>
+              <div class="about__item">
+                <div class="about__item-number">02</div>
+                <h3 class="about__item-title">Инновационный бизнес</h3>
+                <p class="about__item-text">
+                  Для уже работающего технологического бизнес, позволим найти
+                  новые международне рынки сбыта, масштабировать бизнес
+                </p>
+              </div>
+              <div class="about__item about__item-third">
+                <div class="about__item-number">03</div>
+                <h3 class="about__item-title">Корпорации</h3>
+                <p class="about__item-text">
+                  Для уже работающего технологического бизнес, позволим найти
+                  новые международне рынки сбыта, масштабировать бизнес
+                </p>
+              </div>
             </div>
           </div>
         </div>
