market & market apdtv

--- a/src/index.html
+++ b/src/index.html
@@ -168,6 +168,323 @@
         </p>
         <button class="btn btn--blue banner__btn">Получить консультацию</button>
       </section>
+      <!-- market -->
+      <section class="market">
+        <div class="container">
+          <h2 class="title market__title">С какими рынками мы работаем?</h2>
+          <div class="market__tabs">
+            <div class="market__tab market__tab--active">Ближний восток</div>
+            <div class="market__tab">Азия</div>
+            <div class="market__tab">Латинская Америка</div>
+            <div class="market__tab">Африка</div>
+          </div>
+          <div class="market__tabs-content">
+            <div class="market__tab-content">
+              <div class="market__tab-content-left">
+                <h3 class="market__tab-content-title">
+                  Чем интересен <span>Рынок MENA:</span>
+                </h3>
+                <p class="market__tab-content-text">
+                  ОАЭ, Саудовская Аравия, Израиль, Оман, Бахрейн, Катар, Тунис,
+                  Йемен, Египет, Алжир
+                </p>
+                <button class="btn btn--blue market__btn">
+                  Выйти на рынок
+                </button>
+                <div class="market__tab-author">
+                  <div class="market__tab-author-photo">
+                    <img
+                      src="./images/market-manager-photo.jpg"
+                      alt="manager"
+                      class="market__tab-author-img" />
+                  </div>
+                  <div class="market__tab-author-about">
+                    Фатима
+                    <span class="market__tab-author-profession"
+                      >Менеджер по MENA</span
+                    >
+                  </div>
+                </div>
+              </div>
+              <div class="market__tab-content-right">
+                <div class="market__tab-cards">
+                  <div class="market__tab-card">
+                    <div class="market__tab-card-number">
+                      >5,5 <span>млрд</span>
+                    </div>
+                    <div class="market__tab-card-about">
+                      Инвестиции pre-seed, seed
+                    </div>
+                  </div>
+                  <div class="market__tab-card">
+                    <div class="market__tab-card-number">>300</div>
+                    <div class="market__tab-card-about">
+                      Акселераторов, инкубаторов
+                    </div>
+                  </div>
+                  <div class="market__tab-card">
+                    <div class="market__tab-card-number">73</div>
+                    <div class="market__tab-card-about">Венчурных фонда</div>
+                  </div>
+                  <div class="market__tab-card market__tab-card--download">
+                    <div class="market__tab-card-number">
+                      <svg
+                        width="48"
+                        height="42"
+                        viewBox="0 0 48 42"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path
+                          d="M23.041 32.7911C23.4315 33.1816 24.0647 33.1816 24.4552 32.7911L30.8192 26.4271C31.2097 26.0366 31.2097 25.4034 30.8192 25.0129C30.4286 24.6224 29.7955 24.6224 29.405 25.0129L23.7481 30.6697L18.0913 25.0129C17.7007 24.6224 17.0676 24.6224 16.677 25.0129C16.2865 25.4034 16.2865 26.0366 16.677 26.4271L23.041 32.7911ZM22.7481 3.81472e-08L22.7481 32.084L24.7481 32.084L24.7481 -3.81476e-08L22.7481 3.81472e-08Z"
+                          fill="white" />
+                        <line
+                          x1="46.4962"
+                          y1="41"
+                          x2="0.999992"
+                          y2="41"
+                          stroke="white"
+                          stroke-width="2"
+                          stroke-linecap="round" />
+                      </svg>
+                    </div>
+                    <div class="market__tab-card-about">
+                      Скачать отчет по рынку MENA
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="market__tab-content">
+              <div class="market__tab-content-left">
+                <h3 class="market__tab-content-title">
+                  Чем интересен <span>Рынок MENA:</span>
+                </h3>
+                <p class="market__tab-content-text">
+                  ОАЭ, Саудовская Аравия, Израиль, Оман, Бахрейн, Катар, Тунис,
+                  Йемен, Египет, Алжир
+                </p>
+                <button class="btn btn--blue market__btn">
+                  Выйти на рынок
+                </button>
+                <div class="market__tab-author">
+                  <div class="market__tab-author-photo">
+                    <img
+                      src="./images/market-manager-photo.jpg"
+                      alt="manager"
+                      class="market__tab-author-img" />
+                  </div>
+                  <div class="market__tab-author-about">
+                    Фатима
+                    <span class="market__tab-author-profession"
+                      >Менеджер по MENA</span
+                    >
+                  </div>
+                </div>
+              </div>
+              <div class="market__tab-content-right">
+                <div class="market__tab-cards">
+                  <div class="market__tab-card">
+                    <div class="market__tab-card-number">
+                      >5,5 <span>млрд</span>
+                    </div>
+                    <div class="market__tab-card-about">
+                      Инвестиции pre-seed, seed
+                    </div>
+                  </div>
+                  <div class="market__tab-card">
+                    <div class="market__tab-card-number">>300</div>
+                    <div class="market__tab-card-about">
+                      Акселераторов, инкубаторов
+                    </div>
+                  </div>
+                  <div class="market__tab-card">
+                    <div class="market__tab-card-number">73</div>
+                    <div class="market__tab-card-about">Венчурных фонда</div>
+                  </div>
+                  <div class="market__tab-card market__tab-card--download">
+                    <div class="market__tab-card-number">
+                      <svg
+                        width="48"
+                        height="42"
+                        viewBox="0 0 48 42"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path
+                          d="M23.041 32.7911C23.4315 33.1816 24.0647 33.1816 24.4552 32.7911L30.8192 26.4271C31.2097 26.0366 31.2097 25.4034 30.8192 25.0129C30.4286 24.6224 29.7955 24.6224 29.405 25.0129L23.7481 30.6697L18.0913 25.0129C17.7007 24.6224 17.0676 24.6224 16.677 25.0129C16.2865 25.4034 16.2865 26.0366 16.677 26.4271L23.041 32.7911ZM22.7481 3.81472e-08L22.7481 32.084L24.7481 32.084L24.7481 -3.81476e-08L22.7481 3.81472e-08Z"
+                          fill="white" />
+                        <line
+                          x1="46.4962"
+                          y1="41"
+                          x2="0.999992"
+                          y2="41"
+                          stroke="white"
+                          stroke-width="2"
+                          stroke-linecap="round" />
+                      </svg>
+                    </div>
+                    <div class="market__tab-card-about">
+                      Скачать отчет по рынку MENA
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="market__tab-content">
+              <div class="market__tab-content-left">
+                <h3 class="market__tab-content-title">
+                  Чем интересен <span>Рынок MENA:</span>
+                </h3>
+                <p class="market__tab-content-text">
+                  ОАЭ, Саудовская Аравия, Израиль, Оман, Бахрейн, Катар, Тунис,
+                  Йемен, Египет, Алжир
+                </p>
+                <button class="btn btn--blue market__btn">
+                  Выйти на рынок
+                </button>
+                <div class="market__tab-author">
+                  <div class="market__tab-author-photo">
+                    <img
+                      src="./images/market-manager-photo.jpg"
+                      alt="manager"
+                      class="market__tab-author-img" />
+                  </div>
+                  <div class="market__tab-author-about">
+                    Фатима
+                    <span class="market__tab-author-profession"
+                      >Менеджер по MENA</span
+                    >
+                  </div>
+                </div>
+              </div>
+              <div class="market__tab-content-right">
+                <div class="market__tab-cards">
+                  <div class="market__tab-card">
+                    <div class="market__tab-card-number">
+                      >5,5 <span>млрд</span>
+                    </div>
+                    <div class="market__tab-card-about">
+                      Инвестиции pre-seed, seed
+                    </div>
+                  </div>
+                  <div class="market__tab-card">
+                    <div class="market__tab-card-number">>300</div>
+                    <div class="market__tab-card-about">
+                      Акселераторов, инкубаторов
+                    </div>
+                  </div>
+                  <div class="market__tab-card">
+                    <div class="market__tab-card-number">73</div>
+                    <div class="market__tab-card-about">Венчурных фонда</div>
+                  </div>
+                  <div class="market__tab-card market__tab-card--download">
+                    <div class="market__tab-card-number">
+                      <svg
+                        width="48"
+                        height="42"
+                        viewBox="0 0 48 42"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path
+                          d="M23.041 32.7911C23.4315 33.1816 24.0647 33.1816 24.4552 32.7911L30.8192 26.4271C31.2097 26.0366 31.2097 25.4034 30.8192 25.0129C30.4286 24.6224 29.7955 24.6224 29.405 25.0129L23.7481 30.6697L18.0913 25.0129C17.7007 24.6224 17.0676 24.6224 16.677 25.0129C16.2865 25.4034 16.2865 26.0366 16.677 26.4271L23.041 32.7911ZM22.7481 3.81472e-08L22.7481 32.084L24.7481 32.084L24.7481 -3.81476e-08L22.7481 3.81472e-08Z"
+                          fill="white" />
+                        <line
+                          x1="46.4962"
+                          y1="41"
+                          x2="0.999992"
+                          y2="41"
+                          stroke="white"
+                          stroke-width="2"
+                          stroke-linecap="round" />
+                      </svg>
+                    </div>
+                    <div class="market__tab-card-about">
+                      Скачать отчет по рынку MENA
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="market__tab-content">
+              <div class="market__tab-content-left">
+                <h3 class="market__tab-content-title">
+                  Чем интересен <span>Рынок MENA:</span>
+                </h3>
+                <p class="market__tab-content-text">
+                  ОАЭ, Саудовская Аравия, Израиль, Оман, Бахрейн, Катар, Тунис,
+                  Йемен, Египет, Алжир
+                </p>
+                <button class="btn btn--blue market__btn">
+                  Выйти на рынок
+                </button>
+                <div class="market__tab-author">
+                  <div class="market__tab-author-photo">
+                    <img
+                      src="./images/market-manager-photo.jpg"
+                      alt="manager"
+                      class="market__tab-author-img" />
+                  </div>
+                  <div class="market__tab-author-about">
+                    Фатима
+                    <span class="market__tab-author-profession"
+                      >Менеджер по MENA</span
+                    >
+                  </div>
+                </div>
+              </div>
+              <div class="market__tab-content-right">
+                <div class="market__tab-cards">
+                  <div class="market__tab-card">
+                    <div class="market__tab-card-number">
+                      >5,5 <span>млрд</span>
+                    </div>
+                    <div class="market__tab-card-about">
+                      Инвестиции pre-seed, seed
+                    </div>
+                  </div>
+                  <div class="market__tab-card">
+                    <div class="market__tab-card-number">>300</div>
+                    <div class="market__tab-card-about">
+                      Акселераторов, инкубаторов
+                    </div>
+                  </div>
+                  <div class="market__tab-card">
+                    <div class="market__tab-card-number">73</div>
+                    <div class="market__tab-card-about">Венчурных фонда</div>
+                  </div>
+                  <div class="market__tab-card market__tab-card--download">
+                    <div class="market__tab-card-number">
+                      <svg
+                        width="48"
+                        height="42"
+                        viewBox="0 0 48 42"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path
+                          d="M23.041 32.7911C23.4315 33.1816 24.0647 33.1816 24.4552 32.7911L30.8192 26.4271C31.2097 26.0366 31.2097 25.4034 30.8192 25.0129C30.4286 24.6224 29.7955 24.6224 29.405 25.0129L23.7481 30.6697L18.0913 25.0129C17.7007 24.6224 17.0676 24.6224 16.677 25.0129C16.2865 25.4034 16.2865 26.0366 16.677 26.4271L23.041 32.7911ZM22.7481 3.81472e-08L22.7481 32.084L24.7481 32.084L24.7481 -3.81476e-08L22.7481 3.81472e-08Z"
+                          fill="white" />
+                        <line
+                          x1="46.4962"
+                          y1="41"
+                          x2="0.999992"
+                          y2="41"
+                          stroke="white"
+                          stroke-width="2"
+                          stroke-linecap="round" />
+                      </svg>
+                    </div>
+                    <div class="market__tab-card-about">
+                      Скачать отчет по рынку MENA
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <button class="btn btn--blue market__btn--mobile">
+            Выйти на рынок
+          </button>
+        </div>
+      </section>
     </main>
 
     <!-- footer -->
