--- a/src/index.html
+++ b/src/index.html
@@ -1309,6 +1309,133 @@
           </div>
         </div>
       </section>
+      <!-- experts -->
+      <section class="experts">
+        <div class="container">
+          <h2 class="title experts__title">Эксперты и трекеры программы</h2>
+
+          <div class="swiper experts__slider">
+            <div class="swiper-wrapper experts__slider-wrapper">
+              <div class="swiper-slide experts__item">
+                <img
+                  src="./images/expert-1.png"
+                  alt="kim"
+                  class="experts__item-img" />
+                <h4 class="experts__item-title">Юрий Ким</h4>
+                <p class="experts__item-descr">
+                  Проведение исследования целевой аудитории позволит
+                  сформировать Product market fit
+                </p>
+              </div>
+              <div class="swiper-slide experts__item">
+                <img
+                  src="./images/expert-2.png"
+                  alt="kim"
+                  class="experts__item-img" />
+                <h4 class="experts__item-title">Эшли Абрамс</h4>
+                <p class="experts__item-descr">
+                  Проведение исследования целевой аудитории позволит
+                  сформировать Product market fit
+                </p>
+              </div>
+              <div class="swiper-slide experts__item">
+                <img
+                  src="./images/expert-3.png"
+                  alt="kim"
+                  class="experts__item-img" />
+                <h4 class="experts__item-title">Фатими Юсуф</h4>
+                <p class="experts__item-descr">
+                  Проведение исследования целевой аудитории позволит
+                  сформировать Product market fit
+                </p>
+              </div>
+              <div class="swiper-slide experts__item">
+                <img
+                  src="./images/expert-4.png"
+                  alt="kim"
+                  class="experts__item-img" />
+                <h4 class="experts__item-title">Майкл Донован</h4>
+                <p class="experts__item-descr">
+                  Проведение исследования целевой аудитории позволит
+                  сформировать Product market fit
+                </p>
+              </div>
+              <div class="swiper-slide experts__item">
+                <img
+                  src="./images/expert-1.png"
+                  alt="kim"
+                  class="experts__item-img" />
+                <h4 class="experts__item-title">Юрий Ким</h4>
+                <p class="experts__item-descr">
+                  Проведение исследования целевой аудитории позволит
+                  сформировать Product market fit
+                </p>
+              </div>
+              <div class="swiper-slide experts__item">
+                <img
+                  src="./images/expert-2.png"
+                  alt="kim"
+                  class="experts__item-img" />
+                <h4 class="experts__item-title">Эшли Абрамс</h4>
+                <p class="experts__item-descr">
+                  Проведение исследования целевой аудитории позволит
+                  сформировать Product market fit
+                </p>
+              </div>
+              <div class="swiper-slide experts__item">
+                <img
+                  src="./images/expert-3.png"
+                  alt="kim"
+                  class="experts__item-img" />
+                <h4 class="experts__item-title">Фатими Юсуф</h4>
+                <p class="experts__item-descr">
+                  Проведение исследования целевой аудитории позволит
+                  сформировать Product market fit
+                </p>
+              </div>
+              <div class="swiper-slide experts__item">
+                <img
+                  src="./images/expert-4.png"
+                  alt="kim"
+                  class="experts__item-img" />
+                <h4 class="experts__item-title">Майкл Донован</h4>
+                <p class="experts__item-descr">
+                  Проведение исследования целевой аудитории позволит
+                  сформировать Product market fit
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-button-left">
+            <svg
+              width="39"
+              height="39"
+              viewBox="0 0 39 39"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+              transform="rotate(-90)">
+              <ellipse cx="19.5" cy="19.5" rx="19.5" ry="19.5" fill="#2A79C2" />
+              <path
+                d="M20.7071 15.2929C20.3166 14.9024 19.6834 14.9024 19.2929 15.2929L12.9289 21.6569C12.5384 22.0474 12.5384 22.6805 12.9289 23.0711C13.3195 23.4616 13.9526 23.4616 14.3431 23.0711L20 17.4142L25.6569 23.0711C26.0474 23.4616 26.6805 23.4616 27.0711 23.0711C27.4616 22.6805 27.4616 22.0474 27.0711 21.6569L20.7071 15.2929ZM21 17L21 16L19 16L19 17L21 17Z"
+                fill="white" />
+            </svg>
+          </div>
+          <div class="swiper-button-right">
+            <svg
+              width="39"
+              height="39"
+              viewBox="0 0 39 39"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+              transform="rotate(-270 )">
+              <ellipse cx="19.5" cy="19.5" rx="19.5" ry="19.5" fill="#2A79C2" />
+              <path
+                d="M20.7071 15.2929C20.3166 14.9024 19.6834 14.9024 19.2929 15.2929L12.9289 21.6569C12.5384 22.0474 12.5384 22.6805 12.9289 23.0711C13.3195 23.4616 13.9526 23.4616 14.3431 23.0711L20 17.4142L25.6569 23.0711C26.0474 23.4616 26.6805 23.4616 27.0711 23.0711C27.4616 22.6805 27.4616 22.0474 27.0711 21.6569L20.7071 15.2929ZM21 17L21 16L19 16L19 17L21 17Z"
+                fill="white" />
+            </svg>
+          </div>
+        </div>
+      </section>
     </main>
 
     <!-- footer -->
