--- a/src/index.html
+++ b/src/index.html
@@ -1436,10 +1436,245 @@
           </div>
         </div>
       </section>
+      <!-- partners -->
+      <section class="partners">
+        <div class="container">
+          <h2 class="title partners__title">Наши партнеры</h2>
+          <div class="partners__items">
+            <div class="partners__item">
+              <img
+                src="./images/partners/1.png"
+                alt="partner"
+                class="partners__item-img" />
+            </div>
+            <div class="partners__item">
+              <img
+                src="./images/partners/2.png"
+                alt="partner"
+                class="partners__item-img" />
+            </div>
+            <div class="partners__item">
+              <img
+                src="./images/partners/3.png"
+                alt="partner"
+                class="partners__item-img" />
+            </div>
+            <div class="partners__item">
+              <img
+                src="./images/partners/4.png"
+                alt="partner"
+                class="partners__item-img" />
+            </div>
+            <div class="partners__item">
+              <img
+                src="./images/partners/5.png"
+                alt="partner"
+                class="partners__item-img" />
+            </div>
+            <div class="partners__item">
+              <img
+                src="./images/partners/6.png"
+                alt="partner"
+                class="partners__item-img" />
+            </div>
+            <div class="partners__item">
+              <img
+                src="./images/partners/7.png"
+                alt="partner"
+                class="partners__item-img" />
+            </div>
+            <div class="partners__item">
+              <img
+                src="./images/partners/8.png"
+                alt="partner"
+                class="partners__item-img" />
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- community -->
+      <section class="community">
+        <div class="container">
+          <div class="community__wrapper">
+            <h2 class="title community__title">
+              Мы создаем международное сообщество экспертов и партнеров
+            </h2>
+            <p class="community__subtitle">
+              Если вы или ваш бизнес может быть полезен IT командам при выходе
+              на международные рынки, приглашем вас стать нашим партнером
+            </p>
+            <button class="btn btn--blue community__btn">
+              Стать партнером
+            </button>
+          </div>
+        </div>
+      </section>
+      <!-- events -->
+      <section class="events">
+        <div class="container">
+          <h2 class="title events__title">Мероприятия и события</h2>
+          <div class="events__items">
+            <div class="events__item">
+              <div class="events__imgbox">
+                <img
+                  src="./images/events/1.jpg"
+                  alt="event img"
+                  class="events__item-img" />
+              </div>
+              <div class="events__textbox">
+                <h4 class="events__item-title">
+                  <a href="#">Новый отчет по MENA</a>
+                </h4>
+                <p class="events__item-descr">
+                  Аналитический отчет по рынкам Ближнего Востока (инвесторы,
+                  объем раундов, ТОП сферы)
+                </p>
+                <div class="events__item-date">22.11.2022</div>
+              </div>
+            </div>
+
+            <div class="events__item">
+              <div class="events__imgbox">
+                <img
+                  src="./images/events/2.jpg"
+                  alt="event img"
+                  class="events__item-img" />
+              </div>
+              <div class="events__textbox">
+                <h4 class="events__item-title">
+                  <a href="#"
+                    >Вебинар по особенностям рынков Ближнего Востока</a
+                  >
+                </h4>
+                <p class="events__item-descr">
+                  Поговорим с экспертами рынков в формате дискуссии
+                </p>
+                <div class="events__item-date">22.11.2022</div>
+              </div>
+            </div>
+
+            <div class="events__item">
+              <div class="events__imgbox">
+                <img
+                  src="./images/events/3.jpg"
+                  alt="event img"
+                  class="events__item-img" />
+              </div>
+              <div class="events__textbox">
+                <h4 class="events__item-title">
+                  <a href="#">
+                    Вебинар по особенностям рынков Ближнего Востока</a
+                  >
+                </h4>
+                <p class="events__item-descr">
+                  Аналитический отчет по рынкам Ближнего Востока (инвесторы,
+                  объем раундов, ТОП сферы)
+                </p>
+                <div class="events__item-date">22.11.2022</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- questions -->
+      <section class="questions">
+        <div class="container">
+          <div class="questions__wrapper">
+            <div class="questions__textbox">
+              <div class="questions__text-info">
+                <h2 class="title questions__title">Остались вопросы?</h2>
+                <div class="questions__subtitle">
+                  Оставьте заявку и наша команда свяжется с вами
+                </div>
+              </div>
+              <div class="questions__text-contacts">
+                <div class="questions__contacts-title">Или напишите нам:</div>
+                <div class="questions__contacts">
+                  <div class="questions__contacts-imgbox">
+                    <img
+                      src="./images/icons/telegram-icon.jpg"
+                      alt=""
+                      class="question__contacts-telegram" />
+                  </div>
+                  Telegram
+                  <div class="questions__contacts-imgbox">
+                    <img
+                      src="./images/icons/whatsapp-icon.jpg"
+                      alt=""
+                      class="question__contacts-telegram" />
+                  </div>
+                  Whatsapp
+                </div>
+              </div>
+            </div>
+            <form action="#" class="questions__form">
+              <input
+                required
+                type="text"
+                class="questions__form-input"
+                name="name"
+                placeholder="Имя" />
+              <input
+                required
+                type="email"
+                class="questions__form-input"
+                name="mail"
+                placeholder="Почта" />
+              <input
+                required
+                type="tel"
+                class="questions__form-input"
+                name="tel"
+                placeholder="Телефон" />
+              <button type="submit" class="btn btn--green questions__form-btn">
+                Оставить заявку
+              </button>
+            </form>
+          </div>
+        </div>
+      </section>
     </main>
 
     <!-- footer -->
     <!-- @@include("html/_footer.html", {}) -->
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__wrapper">
+          <div class="footer__info">
+            Все права защищены
+            <div class="logo">
+              <a href="#" class="logo__link">
+                <img src="./images/logo.svg" alt="logo" class="logo__img" />
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <nav class="menu footer__menu">
+          <ul class="menu__list">
+            <li class="menu__list-item">
+              <a href="#" class="menu__list-item-link"> Кто мы? </a>
+            </li>
+            <li class="menu__list-item">
+              <a href="#" class="menu__list-item-link"> Услуги </a>
+            </li>
+            <li class="menu__list-item">
+              <a href="#" class="menu__list-item-link"> Акселератор </a>
+            </li>
+            <li class="menu__list-item">
+              <a href="#" class="menu__list-item-link"> Новости </a>
+            </li>
+          </ul>
+        </nav>
+
+        <div class="footer__contacts">
+          <div class="footer__contacts-address">
+            Dubai, Single Business Tower 1503, Business Bay
+          </div>
+          <a href="#" class="footer__contacts-email">Sales@innoma.vc</a>
+        </div>
+      </div>
+    </footer>
   </body>
   <script src="./js/main.min.js"></script>
 </html>
